# langchain-academy

./: .gitignore  main.py  pyproject.toml
cb-module-1/: monty-python.ipynb  non-chat-agent.ipynb  simple-graph.ipynb
module-1/: chain.ipynb  fish-classification-ds.ipynb  fish-classification-mock-validation-test.ipynb  fish-classification.ipynb  fish-monitoring-system.ipynb  routing.ipynb  simple-graph-pydantic.ipynb  simple-graph.ipynb  starfleet-assistant.ipynb
